--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <div class="main">
 
         <!-- dontainer - 1 -->
+        <div class="cont1">
+            <button id="BTN">
+                Create Note
+            </button>
+        </div>
 
     </div>
     
