--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- main div -->
     <div class="main">
 
-        <!-- dontainer - 1 -->
+        <!-- container - 1 -->
         <div class="cont1">
             <button id="BTN">
                 Create Note
