--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
             </button>
         </div>
 
+        <!-- container - 2 -->
+        <div class="cont2">
+
+        </div>
+
+        <!-- container - 3 -->
+        <div class="cont3">
+            <form>
+                <textarea  id="getin" placeholder="Write Note ...">
+
+                </textarea>
+            </form>
+        </div>
+
     </div>
     
 
