--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         <!-- container - 3 -->
         <div class="cont3">
             <form>
-                <textarea  id="getin" placeholder="Write Note ...">
-
-                </textarea>
+                <textarea  id="getin" placeholder="Write Note ..."> </textarea>
+                
             </form>
         </div>
 
