--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <div class="cont3">
             <form>
                 <textarea  id="getin" placeholder="Write Note ..."> </textarea>
+                <!-- Corner logo -->
+                <i class="fas fa-check-square"></i>
                 
             </form>
         </div>
