--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <textarea  id="getin" placeholder="Write Note ..."> </textarea>
                 <!-- Corner logo -->
                 <i class="fas fa-check-square"></i>
-                
+                <i class="fas fa-window-close"></i>
+
             </form>
         </div>
 
