--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
     <link rel="stylesheet" href="style.css">
     <title>Sticky Notes</title>
@@ -29,8 +29,8 @@
             <form>
                 <textarea  id="getin" placeholder="Write Note ..."> </textarea>
                 <!-- Corner logo -->
-                <i class="fas fa-check-square"></i>
-                <i class="fas fa-window-close"></i>
+                <i class="fas fa-check-square" id="checkBTN"></i>
+                <i class="fas fa-window-close" id="cutBTN"></i>
 
             </form>
         </div>
