--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <!-- main div -->
     <div class="main">
 
+        <!-- nav div -->
+        <div class="nav">
+            <h1>Sticky Notes</h1>
+        </div>
+
+
         <!-- container - 1 -->
         <div class="cont1">
             <button id="BTN">
