--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <!-- container - 3 -->
-        <div class="cont3">
+        <div class="cont3" data-aos="zoom-in-down">
             <form>
                 <textarea  id="getin" placeholder="Write Note ..."> </textarea>
                 <!-- Corner logo -->
