--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>
 
         <!-- container - 3 -->
-        <div class="cont3" data-aos="zoom-in-down">
-            <form>
+        <div class="cont3" data-aos="fade-up" data-aos-duration="1000">
+            <form >
                 <textarea  id="getin" placeholder="Write Note ..."> </textarea>
                 <!-- Corner logo -->
                 <i class="fas fa-check-square" id="checkBTN"></i>
