--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <!-- container - 3 -->
-        <div class="cont3" data-aos="fade-up" data-aos-duration="1000">
+        <div class="cont3" data-aos="zoom-in-down" data-aos-duration="1500">
             <form >
                 <textarea  id="getin" placeholder="Write Note ..."> </textarea>
                 <!-- Corner logo -->
